// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly circle 1`] = `
<div
  className="tf-legend tf-legend--level-1"
>
  <h4
    className="tf-legend__title"
  >
    Hello World
  </h4>
  <div
    className="tf-legend__list"
  >
    <div
      className="tf-legend__item item--circle item--left"
    >
      <div
        className="item__symbol-container"
        style={
          Object {
            "height": "px",
            "margin": "0.5rem",
          }
        }
      >
        <div
          className="item__symbol"
          style={
            Object {
              "backgroundColor": "red",
              "height": undefined,
              "width": undefined,
            }
          }
        />
      </div>
      <div
        className="item__label"
      >
        Rouge
      </div>
    </div>
    <div
      className="tf-legend__item item--circle item--left"
    >
      <div
        className="item__symbol-container"
        style={
          Object {
            "height": "px",
            "margin": "0.5rem",
          }
        }
      >
        <div
          className="item__symbol"
          style={
            Object {
              "backgroundColor": "green",
              "height": undefined,
              "width": undefined,
            }
          }
        />
      </div>
      <div
        className="item__label"
      >
        Vert
      </div>
    </div>
    <div
      className="tf-legend__item item--circle item--left"
    >
      <div
        className="item__symbol-container"
        style={
          Object {
            "height": "px",
            "margin": "0.5rem",
          }
        }
      >
        <div
          className="item__symbol"
          style={
            Object {
              "backgroundColor": "blue",
              "height": undefined,
              "width": undefined,
            }
          }
        />
      </div>
      <div
        className="item__label"
      >
        Bleu
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly square 1`] = `
<div
  className="tf-legend tf-legend--level-1"
>
  <h4
    className="tf-legend__title"
  >
    Hello World
  </h4>
  <div
    className="tf-legend__list"
  >
    <div
      className="tf-legend__item item--square item--left"
    >
      <div
        className="item__symbol-container"
        style={
          Object {
            "height": "px",
            "margin": "0.5rem",
          }
        }
      >
        <div
          className="item__symbol"
          style={
            Object {
              "backgroundColor": "red",
              "height": undefined,
              "width": undefined,
            }
          }
        />
      </div>
      <div
        className="item__label"
      >
        Rouge
      </div>
    </div>
    <div
      className="tf-legend__item item--square item--left"
    >
      <div
        className="item__symbol-container"
        style={
          Object {
            "height": "px",
            "margin": "0.5rem",
          }
        }
      >
        <div
          className="item__symbol"
          style={
            Object {
              "backgroundColor": "green",
              "height": undefined,
              "width": undefined,
            }
          }
        />
      </div>
      <div
        className="item__label"
      >
        Vert
      </div>
    </div>
    <div
      className="tf-legend__item item--square item--left"
    >
      <div
        className="item__symbol-container"
        style={
          Object {
            "height": "px",
            "margin": "0.5rem",
          }
        }
      >
        <div
          className="item__symbol"
          style={
            Object {
              "backgroundColor": "blue",
              "height": undefined,
              "width": undefined,
            }
          }
        />
      </div>
      <div
        className="item__label"
      >
        Bleu
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly with multi level 1`] = `
<div
  className="tf-legend tf-legend--level-1"
>
  <h4
    className="tf-legend__title"
  >
    level1
  </h4>
  <div
    className="tf-legend__list"
  >
    <div
      className="tf-legend__item item--square item--left"
    >
      <div
        className="item__symbol-container"
        style={
          Object {
            "height": "px",
            "margin": "0.5rem",
          }
        }
      >
        <div
          className="item__symbol"
          style={
            Object {
              "backgroundColor": "red",
              "height": undefined,
              "width": undefined,
            }
          }
        />
      </div>
      <div
        className="item__label"
      >
        level1.1
      </div>
    </div>
    <div
      className="tf-legend__item item--square item--left"
    >
      <div
        className="item__symbol-container"
        style={
          Object {
            "height": "px",
            "margin": "0.5rem",
          }
        }
      >
        <div
          className="item__symbol"
          style={
            Object {
              "backgroundColor": "blue",
              "height": undefined,
              "width": undefined,
            }
          }
        />
      </div>
      <div
        className="item__label"
      >
        level1.2
      </div>
    </div>
    <div
      className="tf-legend tf-legend--level-2"
    >
      <h4
        className="tf-legend__title"
      >
        level2
      </h4>
      <div
        className="tf-legend__list"
      >
        <div
          className="tf-legend__item item--square item--left"
        >
          <div
            className="item__symbol-container"
            style={
              Object {
                "height": "px",
                "margin": "0.5rem",
              }
            }
          >
            <div
              className="item__symbol"
              style={
                Object {
                  "backgroundColor": "red",
                  "height": undefined,
                  "width": undefined,
                }
              }
            />
          </div>
          <div
            className="item__label"
          >
            level2.1
          </div>
        </div>
        <div
          className="tf-legend__item item--square item--left"
        >
          <div
            className="item__symbol-container"
            style={
              Object {
                "height": "px",
                "margin": "0.5rem",
              }
            }
          >
            <div
              className="item__symbol"
              style={
                Object {
                  "backgroundColor": "blue",
                  "height": undefined,
                  "width": undefined,
                }
              }
            />
          </div>
          <div
            className="item__label"
          >
            level2.2
          </div>
        </div>
        <div
          className="tf-legend tf-legend--level-3"
        >
          <h4
            className="tf-legend__title"
          >
            level3
          </h4>
          <div
            className="tf-legend__list"
          >
            <div
              className="tf-legend__item item--square item--left"
            >
              <div
                className="item__symbol-container"
                style={
                  Object {
                    "height": "px",
                    "margin": "0.5rem",
                  }
                }
              >
                <div
                  className="item__symbol"
                  style={
                    Object {
                      "backgroundColor": "red",
                      "height": undefined,
                      "width": undefined,
                    }
                  }
                />
              </div>
              <div
                className="item__label"
              >
                level3.1
              </div>
            </div>
            <div
              className="tf-legend__item item--square item--left"
            >
              <div
                className="item__symbol-container"
                style={
                  Object {
                    "height": "px",
                    "margin": "0.5rem",
                  }
                }
              >
                <div
                  className="item__symbol"
                  style={
                    Object {
                      "backgroundColor": "blue",
                      "height": undefined,
                      "width": undefined,
                    }
                  }
                />
              </div>
              <div
                className="item__label"
              >
                level3.2
              </div>
            </div>
            <div
              className="tf-legend tf-legend--level-4"
            >
              <h4
                className="tf-legend__title"
              >
                level4
              </h4>
              <div
                className="tf-legend__list"
              >
                <div
                  className="tf-legend__item item--square item--left"
                >
                  <div
                    className="item__symbol-container"
                    style={
                      Object {
                        "height": "px",
                        "margin": "0.5rem",
                      }
                    }
                  >
                    <div
                      className="item__symbol"
                      style={
                        Object {
                          "backgroundColor": "red",
                          "height": undefined,
                          "width": undefined,
                        }
                      }
                    />
                  </div>
                  <div
                    className="item__label"
                  >
                    level4.1
                  </div>
                </div>
                <div
                  className="tf-legend__item item--square item--left"
                >
                  <div
                    className="item__symbol-container"
                    style={
                      Object {
                        "height": "px",
                        "margin": "0.5rem",
                      }
                    }
                  >
                    <div
                      className="item__symbol"
                      style={
                        Object {
                          "backgroundColor": "blue",
                          "height": undefined,
                          "width": undefined,
                        }
                      }
                    />
                  </div>
                  <div
                    className="item__label"
                  >
                    level4.2
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
